# SSH-Executor

./: .gitignore  LICENSE  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Tunnels/: README.txt  START.bat  ssh_tunnel_manager.py
scripts/: clear-cargo-locks.ps1  create-ico.js  create-platform-icons.js  fix-cargo-ssl-now.ps1  fix-cargo-ssl.ps1  fix-ssl-cargo.ps1  fix-ssl-issue.ps1  generate-icons.js  kill-port.ps1  pre-dev.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audit.rs  command_validation.rs  commands.rs  error.rs  error_handler.rs  excel_export.rs  file_parser.rs  main.rs  security.rs  ssh.rs
src/components/: ConfirmDialog.tsx  DebugConsole.tsx  ErrorBoundary.tsx  HelpTooltip.tsx  Layout.tsx  SegmentedControl.tsx  ToggleSwitch.tsx
src/components/icons/: ActivityIcon.tsx  AlertCircleIcon.tsx  ArrowRightIcon.tsx  BellIcon.tsx  CheckCircleIcon.tsx  ChevronRightIcon.tsx  ClockIcon.tsx  DashboardIcon.tsx  DownloadIcon.tsx  FileTextIcon.tsx  HelpIcon.tsx  InfoIcon.tsx  KeyIcon.tsx  Loader2Icon.tsx  LockIcon.tsx  MenuIcon.tsx  PlayIcon.tsx  RefreshCwIcon.tsx  SaveIcon.tsx  ServerIcon.tsx  SettingsIcon.tsx  TerminalIcon.tsx  TrendingUpIcon.tsx  index.ts  (+5 more)
src/pages/: AuditLogs.tsx  Settings.tsx  Workspace.tsx
src/types/: index.ts
src/utils/: clipboard.ts  commandHistory.ts  date.ts  density.ts  errorMessages.ts  excel.ts  hostsUtils.ts  resultsCleanup.ts  sessionTimer.ts  settings.ts  toast.ts  useSettings.ts  validation.ts
