[package]
name = "ssh-executor"
version = "1.0.0"
description = "SSH Executor - приложение для управления SSH подключениями к транспортным средствам"
authors = ["SSH Executor Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut-all", "fs-exists", "dialog-open", "notification-all", "fs-rename-file", "fs-copy-file", "fs-remove-dir", "fs-read-dir", "fs-remove-file", "fs-read-file", "fs-create-dir", "fs-write-file", "shell-open", "dialog-save", "system-tray", "global-shortcut", "notification", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
regex = "1.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
parking_lot = "0.12"
rayon = "1.8"
lru = "0.12"
calamine = "0.24"
encoding_rs = "0.8"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
csv = "1.3"
base64 = "0.21"
bcrypt = "0.15"
once_cell = "1.19"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
